--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <h1 class="mx-auto my-0 text-uppercase">MD SAJID ANIS</h1>
                 <h2 class="text-white mx-auto mt-2 mb-4">Passionate about Artificial Intelligence, Block-Chain and App
                     development, I present here my main creations made during my studies </h2>
-                <a class="btn btn-primary js-scroll-trigger" href="#about">Tell Us More</a>
+                <a class="btn btn-primary js-scroll-trigger" href="#about">Know More</a>
             </div>
         </div>
     </header>
